Updated style guide draft by @cfarquharson.

--- a/new/accessibility/colour-en.html
+++ b/new/accessibility/colour-en.html
@@ -18,7 +18,7 @@
 <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to   this topic.  Additional WCAG 2.0 success criteria, techniques, and   failures not listed here may also be applicable depending on the   content.</p>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -33,18 +33,20 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="../design/alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="../design/colour-en.html" class="list-group-item">Colour - Design guide</a> <a href="../design/panels-en.html" class="list-group-item">Panels - Design guide</a> <a href="../design/tables-en.html" class="list-group-item">Tables - Design guide</a></div>
+        <div class="list-group"><a href="../design/alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="../design/colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Design guide</span></a> <a href="../design/labels-en.html" class="list-group-item">Labels<span class="wb-inv"> - Design guide</span></a> <a href="../design/panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="../design/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
+      <h2 id="ct">Colour contrast</h2>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
-  <h2 id="ct">Colour contrast</h2>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
