--- a/new/accessibility/forms-en.html
+++ b/new/accessibility/forms-en.html
@@ -18,7 +18,7 @@
 <div class="wb-prettify all-pre">
   <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to this topic.  Additional WCAG 2.0 success criteria, techniques, and failures not listed here may also be applicable depending on the content.</p>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -35,19 +35,27 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Accessibility guide</h2>
         </div>
-        <div class="list-group"><a href="keyboard-en.html" class="list-group-item">Keyboard and User Controls - Accessibility guide</a> <a href="../design/forms-en.html" class="list-group-item">Forms - Design guide</a> <a href="../design/buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html" class="list-group-item">Feedback form - Design guide</a></div>
+        <div class="list-group"><a href="keyboard-en.html" class="list-group-item">Keyboard and User Controls<span class="wb-inv"> - Accessibility guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Design guide</h2>
+        </div>
+        <div class="list-group"><a href="../design/forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Design guide</span></a> <a href="../design/buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html" class="list-group-item">Feedback form<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>A form contains a set of form elements, which are a type <a href="keyboard-en.html">user control</a> that accepts user input.  Form elements are the foundation for nearly all web applications.</p>
+      <h2 id="accessibility">Labels</h2>
+      <h3 id="lb">Associate labels</h3>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>A form contains a set of form elements, which are a type <a href="keyboard-en.html">user control</a> that accepts user input.  Form elements are the foundation for nearly all web applications.</p>
-  <h2 id="accessibility">Labels</h2>
-  <h3 id="lb">Associate labels</h3>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
