--- a/new/accessibility/images-en.html
+++ b/new/accessibility/images-en.html
@@ -18,7 +18,7 @@
 <div class="wb-prettify all-pre">
   <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to   this topic.  Additional WCAG 2.0 success criteria, techniques, and   failures not listed here may also be applicable depending on the   content.</p>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -38,18 +38,26 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images - Design guide</a> <a href="../design/icons-en.html" class="list-group-item">Icons - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed interface: Carousel - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html" class="list-group-item">Data picture - Design guide</a> <a href="../writing/principals-en.html#image" class="list-group-item">Images - Writing guide</a></div>
+        <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="../design/icons-en.html" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html" class="list-group-item">Data picture<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide</h2>
+        </div>
+        <div class="list-group"><a href="../writing/principals-en.html#image" class="list-group-item">Images<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as <a href="#decorative">decorative</a>, <a href="#simple">simple</a>, <a href="#complex">complex</a>, or an <a href="#text">image of text</a>.</p>
+      <h2 id="decorative">Decorative images</h2>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as <a href="#decorative">decorative</a>, <a href="#simple">simple</a>, <a href="#complex">complex</a>, or an <a href="#text">image of text</a>.</p>
-  <h2 id="decorative">Decorative images</h2>
   <div class="row">
     <div class="col-md-8">
       <p>Decorative images are images serving only an aesthetic purpose, providing no information, and having no  functionality. These images are intended to be ignored by assistive technologies (such as screen readers).</p>
