--- a/new/accessibility/index-en.html
+++ b/new/accessibility/index-en.html
@@ -20,12 +20,18 @@
       <div class="col-md-4"> <img src="../accessibility.jpg" alt=""  class="media-object img-responsive img-thumbnail mrgn-bttm-lg" /> </div>
       <div class="col-md-8">
         <p>The accessibility guide provides content authors and webmasters with an understanding of how to create and code content so that is accessible to all users, regardless of ability or disability.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <p>Background: </p>
         <ul>
           <li><a href="introduction-en.html">Introduction to WCAG 2.0</a></li>
           <li><a href="applicibility-en.html">Success Criteria Applicability</a></li>
           <li><a href="population-en.html">Accessibility and the Canadian population </a></li>
         </ul>
+      </div>
+      <div class="col-md-6">
         <p>Coding specifics:</p>
         <ul>
           <li><a href="summary-en.html">Summary of coding requirements</a></li>
