--- a/new/accessibility/keyboard-en.html
+++ b/new/accessibility/keyboard-en.html
@@ -18,7 +18,7 @@
 <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to   this topic.  Additional WCAG 2.0 success criteria, techniques, and   failures not listed here may also be applicable depending on the   content.</p>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -34,35 +34,49 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Accessibility guide</h2>
         </div>
-        <div class="list-group"><a class="list-group-item" href="../design/buttons-en.html">Buttons - Design guide</a> <a class="list-group-item" href="../design/forms-en.html">Forms - Design guide</a> <a class="list-group-item" href="../design/links-en.html">Links - Design guide</a><a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation  - Design guide</a> <a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html">Feedback form - Design guide</a> <a class="list-group-item" href="forms-en.html">Forms - Accessibility guide</a> <a class="list-group-item" href="links-en.html">Links - Accessibility guide</a> <a class="list-group-item" href="../writing/principals-en.html#links">Links - Writing guide</a></div>
+        <div class="list-group"><a class="list-group-item" href="forms-en.html">Forms<span class="wb-inv"> - Accessibility guide</span></a> <a class="list-group-item" href="links-en.html">Links<span class="wb-inv"> - Accessibility guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Design guide</h2>
+        </div>
+        <div class="list-group"><a class="list-group-item" href="../design/buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="../design/forms-en.html">Forms<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="../design/links-en.html">Links<span class="wb-inv"> - Design guide</span></a><a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html">Form validation<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html">Feedback form<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide</h2>
+        </div>
+        <div class="list-group"><a class="list-group-item" href="../writing/principals-en.html#links">Links<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>The keyboard is typically the exclusive interface that assistive technologies use to interact with user controls on a web page. Pointer-specific functionality performed with a mouse such as pointing, clicking, and dragging is often not available to assistive technologies and cannot be relied upon.</p>
+      <p><strong>User controls</strong> are elements that can perform an action (or "do something") such as <a href="links-en.html">links</a> and <a href="forms-en.html">form elements</a>.  They are common in many technologies including HTML, PDF, Flash, and Sliverlight.</p>
+      <p>The following are the most common user controls in HTML:</p>
+      <p><a href="#">Link</a>
+        <input type="text" title="Text Box">
+        <input type="checkbox" title="Checkbox">
+        <input type="radio" title="Radio Button">
+        <select title="Select Box" size="3">
+          <option>&#160;</option>
+          <option>&#160;</option>
+          <option>&#160;</option>
+        </select>
+        <select title="Dropdown Box" size="1">
+          <option>&#160;</option>
+          <option>&#160;</option>
+          <option>&#160;</option>
+        </select>
+        <input type="submit" title="Button" value="Button">
+      </p>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>The keyboard is typically the exclusive interface that assistive technologies use to interact with user controls on a web page. Pointer-specific functionality performed with a mouse such as pointing, clicking, and dragging is often not available to assistive technologies and cannot be relied upon.</p>
-  <p><strong>User controls</strong> are elements that can perform an action (or "do something") such as <a href="links-en.html">links</a> and <a href="forms-en.html">form elements</a>.  They are common in many technologies including HTML, PDF, Flash, and Sliverlight.</p>
-  <p>The following are the most common user controls in HTML:</p>
-  <p><a href="#">Link</a>
-    <input type="text" title="Text Box">
-    <input type="checkbox" title="Checkbox">
-    <input type="radio" title="Radio Button">
-    <select title="Select Box" size="3">
-      <option>&#160;</option>
-      <option>&#160;</option>
-      <option>&#160;</option>
-    </select>
-    <select title="Dropdown Box" size="1">
-      <option>&#160;</option>
-      <option>&#160;</option>
-      <option>&#160;</option>
-    </select>
-    <input type="submit" title="Button" value="Button">
-  </p>
   <h2 id="fi">Focus and input</h2>
   <div class="row">
     <div class="pull-right col-md-4">
