--- a/new/accessibility/quotations-en.html
+++ b/new/accessibility/quotations-en.html
@@ -35,11 +35,17 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="../design/blockquotes-en.html" class="list-group-item">Blockquotes - Design guide</a> <a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes - Writing guide</a></div>
+        <div class="list-group"><a href="../design/blockquotes-en.html" class="list-group-item">Blockquotes<span class="wb-inv"> - Design guide</span></a> </div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide</h2>
+        </div>
+        <div class="list-group"><a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
   </div>
