--- a/new/design/code-en.html
+++ b/new/design/code-en.html
@@ -31,11 +31,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html" class="list-group-item">Prettify code - Design guide </a></div>
+        <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html" class="list-group-item">Prettify code <span class="wb-inv">- Design guide </span></a></div>
       </div>
     </div>
   </div>
