--- a/new/design/forms-en.html
+++ b/new/design/forms-en.html
@@ -17,7 +17,7 @@
 <h1>Forms <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -37,17 +37,25 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation  - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html" class="list-group-item">Feedback form - Design guide</a> <a href="../accessibility/forms-en.html" class="list-group-item">Forms - Accessibility guide</a> <a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls - Accessibility guide</a></div>
+        <div class="list-group"><a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/feedback/feedback-en.html" class="list-group-item">Feedback form<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide</h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Accessibility guide</span></a> <a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>A form contains a set of form elements, which are a type <a href="../accessibility/keyboard-en.html">user control</a> that accepts user input.  Form elements are the foundation for nearly all web applications.</p>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>A form contains a set of form elements, which are a type <a href="../accessibility/keyboard-en.html">user control</a> that accepts user input.  Form elements are the foundation for nearly all web applications.</p>
   <h2 id="example">Basic example</h2>
   <p>Individual form controls automatically receive some global styling. All textual <code>&lt;input&gt;</code>, <code>&lt;textarea&gt;</code>, and <code>&lt;select&gt;</code> elements with <code>.form-control</code> are set to <code>width: 100%;</code> by default. Wrap labels and controls in <code>.form-group</code> for optimum spacing.</p>
   <form role="form">
@@ -290,7 +298,7 @@
   </div>
   <div class="alert alert-info">
     <h4>Input groups</h4>
-    <p>To add integrated text or buttons before and/or after any text-based <code>&lt;input&gt;</code>, <a href="file:///C|/Users/Toshiba/Desktop/components/#input-groups">check out the input group component</a>.</p>
+    <p>To add integrated text or buttons before and/or after any text-based <code>&lt;input&gt;</code>, <a href="#input-groups">check out the input group component</a>.</p>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
     <div class="col-md-6">
