--- a/new/design/jumbotron-en.html
+++ b/new/design/jumbotron-en.html
@@ -17,7 +17,7 @@
 <h1>Jumbotron <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -31,17 +31,19 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="panels-en.html" class="list-group-item">Panels - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed Interface:  Carousel - Design guide</a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html" class="list-group-item">Tabbed Interface:  Carousel<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p>
   <h2 id="default">Default jumbotron</h2>
   <div class="jumbotron">
     <h1>Hello, world!</h1>
