--- a/new/design/keyboard-en.html
+++ b/new/design/keyboard-en.html
@@ -31,11 +31,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Accessibility guide</h2>
         </div>
-        <div class="list-group"><a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls - Accessibility guide</a></div>
+        <div class="list-group"><a href="../accessibility/keyboard-en.html" class="list-group-item">Keyboard and user controls<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
   </div>
