--- a/new/design/listgroup-en.html
+++ b/new/design/listgroup-en.html
@@ -34,11 +34,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges - Design guide</a> <a href="pagination-en.html" class="list-group-item">Pagination - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a></div>
+        <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
