--- a/new/design/options-en.html
+++ b/new/design/options-en.html
@@ -12,10 +12,10 @@
   <li><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET </a></li>
   <li><a href="../index-en.html">Style guide</a></li>
   <li><a href="index-en.html">Design guide</a></li>
-  <li>Design options</li>
+  <li>Snapshot of design features</li>
   <li></li>
 </ol>
-<h1>Design options </h1>
+<h1>Snapshot of design features <small>Design guide</small></h1>
 <div class="row">
   <div class="col-md-6">
     <section id="typography" class="panel panel-default">
@@ -32,7 +32,7 @@
         <h6>h6 heading</h6>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="headings-en.html" class="btn btn-primary">Headings <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="headings-en.html" class="btn btn-primary">Headings <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
     <section class="panel panel-default" id="blockquotes">
@@ -45,7 +45,7 @@
           <small>Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="blockquotes-en.html" class="btn btn-primary">Blockquotes <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="blockquotes-en.html" class="btn btn-primary">Blockquotes <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -77,7 +77,7 @@
         <p class="h6">This is text in a <code>.h6</code> class.</p>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="colour-en.html" class="btn btn-primary">Colour <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="sizing-en.html" class="btn btn-primary">Sizing <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="code-en.html" class="btn btn-primary">Code <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="keyboard-en.html" class="btn btn-primary">Keyboard keys <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="colour-en.html" class="btn btn-primary">Colour <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="sizing-en.html" class="btn btn-primary">Sizing <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="code-en.html" class="btn btn-primary">Code <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="keyboard-en.html" class="btn btn-primary">Keyboard keys <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </div>
   </div>
@@ -158,7 +158,7 @@
       </div>
     </div>
     <div class="panel-footer text-right">
-      <p class="mrgn-bttm-0">In detail: <a href="tables-en.html" class="btn btn-primary">Tables <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+      <p class="mrgn-bttm-0 h4">In detail: <a href="tables-en.html" class="btn btn-primary">Tables <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     </div>
   </div>
   <div class="row">
@@ -171,7 +171,7 @@
             </div>
             <div class="panel-body"> <img src="http://placehold.it/140x140" class="img-rounded" alt="A generic square placeholder image with rounded corners"> <img src="http://placehold.it/140x140" class="img-circle" alt="A generic square placeholder image where only the portion within the circle circumscribed about said square is visible"> <img src="http://placehold.it/140x140" class="img-thumbnail" alt="A generic square placeholder image with a white border around it, making it resemble a photograph taken with an old instant camera"> </div>
             <div class="panel-footer text-right">
-              <p class="mrgn-bttm-0">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+              <p class="mrgn-bttm-0 h4">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a></p>
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
               <p class="mrgn-tp-lg">...with a large top margin</p>
             </div>
             <div class="panel-footer text-right">
-              <p class="mrgn-bttm-0">In detail: <a href="proximity-en.html" class="btn btn-primary">Margin proximity <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+              <p class="mrgn-bttm-0 h4">In detail: <a href="proximity-en.html" class="btn btn-primary">Margin proximity <span class="glyphicon glyphicon-chevron-right"></span></a></p>
             </div>
           </div>
         </div>
@@ -212,7 +212,7 @@
           <p class="pull-left">Left floated text.</p>
         </div>
         <div class="panel-footer text-right">
-          <p class="mrgn-bttm-0">In detail: <a href="alignment-en.html" class="btn btn-primary">Alignment <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="floats-en.html" class="btn btn-primary">Floats <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+          <p class="mrgn-bttm-0 h4">In detail: <a href="alignment-en.html" class="btn btn-primary">Alignment <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="floats-en.html" class="btn btn-primary">Floats <span class="glyphicon glyphicon-chevron-right"></span></a></p>
         </div>
       </div>
     </div>
@@ -343,7 +343,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="lists-en.html" class="btn btn-primary">Lists <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="lists-en.html" class="btn btn-primary">Lists <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="buttons">
@@ -772,7 +772,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="forms">
@@ -1125,7 +1125,7 @@
     </div>
     <span class="help-block">Help text: a block of help text that breaks onto a new line and may extend beyond one line.</span> </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="forms-en.html" class="btn btn-primary">Forms <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="forms-en.html" class="btn btn-primary">Forms <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="pills">
@@ -1184,7 +1184,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="pills-en.html" class="btn btn-primary">Pills <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="pills-en.html" class="btn btn-primary">Pills <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </section>
 <div class="row">
@@ -1215,7 +1215,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="borders-en.html" class="btn btn-primary">Borders <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="borders-en.html" class="btn btn-primary">Borders <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1274,7 +1274,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="pagination-en.html" class="btn btn-primary">Pagination <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="pagination-en.html" class="btn btn-primary">Pagination <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1294,7 +1294,7 @@
         <h6>Example heading <span class="label label-default">New</span></h6>
         <span class="label label-default">Default</span> <span class="label label-primary">Primary</span> <span class="label label-success">Success</span> <span class="label label-info">Info</span> <span class="label label-warning">Warning</span> <span class="label label-danger">Danger</span></div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="labels-en.html" class="btn btn-primary">Labels <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="labels-en.html" class="btn btn-primary">Labels <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
     <section class="panel panel-default" id="progress-bars">
@@ -1339,7 +1339,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="progress-en.html" class="btn btn-primary">Progress bar <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="progress-en.html" class="btn btn-primary">Progress bar <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1363,7 +1363,7 @@
         </ul>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="badges-en.html" class="btn btn-primary">Badges <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="badges-en.html" class="btn btn-primary">Badges <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
     <section class="panel panel-default" id="alerts">
@@ -1383,7 +1383,7 @@
         </div>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="alerts-en.html" class="btn btn-primary">Alerts <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="alerts-en.html" class="btn btn-primary">Alerts <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1434,7 +1434,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a> <a href="buttons-en.html" class="btn btn-primary">Buttons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="media-object">
@@ -1476,7 +1476,7 @@
     </ul>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="images-en.html" class="btn btn-primary">Images <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="wells">
@@ -1497,7 +1497,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="wells-en.html" class="btn btn-primary">Wells <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="wells-en.html" class="btn btn-primary">Wells <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="list-groups">
@@ -1533,7 +1533,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="listgroup-en.html" class="btn btn-primary">List group <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="listgroup-en.html" class="btn btn-primary">List group <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
   </div>
 </section>
 <section class="panel panel-default" id="panels">
@@ -1594,7 +1594,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="panels-en.html" class="btn btn-primary">Panels <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="panels-en.html" class="btn btn-primary">Panels <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
   </div>
 </section>
 <div class="row">
@@ -1606,7 +1606,7 @@
         <p class="opct-70">Demo text</p>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="opacity-en.html" class="btn btn-primary">Opacity <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="opacity-en.html" class="btn btn-primary">Opacity <span class="glyphicon glyphicon-chevron-right"></span></a></a></p>
       </div>
     </section>
     <section class="panel panel-default" id="selects">
@@ -1631,7 +1631,7 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <p class="mrgn-bttm-0">In detail: <a href="position-en.html" class="btn btn-primary">Absolute positioning <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+          <p class="mrgn-bttm-0 h4">In detail: <a href="position-en.html" class="btn btn-primary">Absolute positioning <span class="glyphicon glyphicon-chevron-right"></span></a></p>
         </div>
       </div>
     </section>
@@ -1641,7 +1641,7 @@
         <p>Content can be made appear or hide using CSS.</p>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="visible-en.html" class="btn btn-primary">Invisible and visible content <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="visible-en.html" class="btn btn-primary">Invisible and visible content <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1673,7 +1673,7 @@
         </ul>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="icons-en.html" class="btn btn-primary">Icons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="icons-en.html" class="btn btn-primary">Icons <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
     <section class="panel panel-default" id="search">
@@ -1683,7 +1683,7 @@
         <p>...</p>
       </div>
       <div class="panel-footer text-right">
-        <p class="mrgn-bttm-0">In detail: <a href="jumbotron-en.html" class="btn btn-primary">Jumbotron <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p class="mrgn-bttm-0 h4">In detail: <a href="jumbotron-en.html" class="btn btn-primary">Jumbotron <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </section>
   </div>
@@ -1728,7 +1728,7 @@
     </div>
   </div>
   <div class="panel-footer text-right">
-    <p class="mrgn-bttm-0">In detail: <a href="grids-en.html" class="btn btn-primary">Grids <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p class="mrgn-bttm-0 h4">In detail: <a href="grids-en.html" class="btn btn-primary">Grids <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
 </div>
 </body>
