--- a/new/design/pills-en.html
+++ b/new/design/pills-en.html
@@ -17,7 +17,7 @@
 <h1>Pills <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -34,30 +34,38 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a class="list-group-item" href="badges-en.html">Badges - Design guide</a> <a class="list-group-item" href="listgroup-en.html">List group - Design guide</a> <a class="list-group-item" href="buttons-en.html">Buttons - Design guide</a> <a class="list-group-item" href="lists-en.html">Lists - Design guide</a> <a class="list-group-item" href="../writing/principals-en.html#lists">List principals - Writing guide</a> <a class="list-group-item" href="../writing/formatting-en.html#lists">List formatting - Writing guide</a></div>
+        <div class="list-group"><a class="list-group-item" href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="listgroup-en.html">List group<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="buttons-en.html">Buttons<span class="wb-inv"> - Design guide</span></a> <a class="list-group-item" href="lists-en.html">Lists<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide </h2>
+        </div>
+        <div class="list-group"><a class="list-group-item" href="../writing/principals-en.html#lists">List principals<span class="wb-inv"> - Writing guide</span></a> <a class="list-group-item" href="../writing/formatting-en.html#lists">List formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
-  </div>
-  <h2 id="description">Description</h2>
-  <p>(Info goes here)</p>
-  <h2 id="default">Default pills</h2>
-  <ul class="nav nav-pills">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Messages</a></li>
-  </ul>
-  <div class="mrgn-tp-lg">
-    <pre><code class="html">&lt;ul class=&quot;nav nav-pills&quot;&gt;
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>(Info goes here)</p>
+      <h2 id="default">Default pills</h2>
+      <ul class="nav nav-pills">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Messages</a></li>
+      </ul>
+      <div class="mrgn-tp-lg">
+        <pre><code class="html">&lt;ul class=&quot;nav nav-pills&quot;&gt;
   &lt;li class=&quot;active&quot;&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;&lt;/li&gt;
   &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Profile&lt;/a&gt;&lt;/li&gt;
   &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Messages&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;
 </code></pre>
+      </div>
+    </div>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
     <div class="col-md-6">
@@ -94,7 +102,6 @@
   </div>
   <h2 id="justified">Justified pills</h2>
   <p>Easily make tabs or pills equal widths of their parent at screens wider than 768px with <code>.nav-justified</code>. On smaller screens, the nav links are stacked.</p>
-  
   <ul class="nav nav-pills nav-justified">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="#">Profile</a></li>
