--- a/new/design/position-en.html
+++ b/new/design/position-en.html
@@ -32,11 +32,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="grids-en.html" class="list-group-item">Grids - Design guide</a> <a href="proximity-en.html" class="list-group-item">Margin proxmity - Design guide</a> <a href="images-en.html" class="list-group-item">Images - Design guide</a> <a href="opacity-en.html" class="list-group-item">Opacity - Design guide</a></div>
+        <div class="list-group"><a href="grids-en.html" class="list-group-item">Grids<span class="wb-inv"> - Design guide</span></a> <a href="proximity-en.html" class="list-group-item">Margin proxmity<span class="wb-inv"> - Design guide</span></a> <a href="images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="opacity-en.html" class="list-group-item">Opacity<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
