--- a/new/role/author-en.html
+++ b/new/role/author-en.html
@@ -14,7 +14,7 @@
   <li>Author role </li>
 </ol>
 <h1>Author role</h1>
-<p>An <strong>author, content creator or content coordinator</strong>  commonly needs to know the design options and writing standards and principals.</p>
+<p>An <strong>author, content creator or content coordinator</strong> commonly needs to know the design options and writing standards and principals.</p>
 <div class="row">
   <div class="col-md-6">
     <div class="panel panel-default">
@@ -23,7 +23,7 @@
       </div>
       <div class="panel-body">
         <p>All design and layout features must be adhered to.</p>
-        <p>Refer to: <a href="../design/options-en.html" class="btn btn-info">Design options</a></p>
+        <p>Refer to: <a href="../design/options-en.html" class="btn btn-primary">Snapshot of design features</a></p>
       </div>
     </div>
   </div>
@@ -35,18 +35,13 @@
       <div class="panel-body">
         <p>Although a webmaster or developer does not create the content, they must still know basic content creation principals.</p>
         <p>Refer to:</p>
-		<ul class="clmn-2-md list-unstyled">
-          <li><a href="../writing/principals-en.html" class="btn btn-info mrgn-bttm-sm btn-block">Content creation principals</a></li>
-		  <li><a href="../writing/formatting-en.html" class="btn btn-info btn-block">Content formatting</a></li>
+        <ul class="clmn-2-md list-unstyled">
+          <li><a href="../writing/principals-en.html" class="btn btn-primary mrgn-bttm-sm btn-block">Content creation principals</a></li>
+          <li><a href="../writing/formatting-en.html" class="btn btn-primary btn-block">Content formatting</a></li>
         </ul>
       </div>
     </div>
   </div>
-
-  
 </div>
-
-
-  
 </body>
 </html>
