--- a/new/role/webmaster-en.html
+++ b/new/role/webmaster-en.html
@@ -23,7 +23,7 @@
       </div>
       <div class="panel-body">
         <p>All design and layout features must be adhered to.</p>
-        <p>Refer to: <a href="../design/index-en.html" class="btn btn-info">Design guide</a></p>
+        <p>Refer to: <a href="../design/index-en.html" class="btn btn-primary">Design guide</a></p>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
       </div>
       <div class="panel-body">
         <p>Although a webmaster or developer does not create the content, they must still know basic content creation principals.</p>
-        <p>Refer to: <a href="../writing/principals-en.html" class="btn btn-info">Content creation principals</a></p>
+        <p>Refer to: <a href="../writing/principals-en.html" class="btn btn-primary">Content creation principals</a></p>
       </div>
     </div>
   </div>
@@ -45,7 +45,7 @@
       </div>
       <div class="panel-body">
         <p>All usability principals must be adhered to.</p>
-        <p>Refer to: <a href="../usability/index-en.html" class="btn btn-info">Usability guide</a></p>
+        <p>Refer to: <a href="../usability/index-en.html" class="btn btn-primary">Usability guide</a></p>
       </div>
     </div>
   </div>
@@ -56,7 +56,7 @@
       </div>
       <div class="panel-body">
         <p>All accessibility requirements must be adhered to.</p>
-        <p>Refer to: <a href="../accessibility/index-en.html" class="btn btn-info">Accessibility</a></p>
+        <p>Refer to: <a href="../accessibility/index-en.html" class="btn btn-primary">Accessibility</a></p>
       </div>
     </div>
   </div>
