--- a/new/writing/principals-en.html
+++ b/new/writing/principals-en.html
@@ -69,7 +69,7 @@ blockquote p {font-size:16px;}
 <h2 id="print">Print versus Web</h2>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Authors who write their content specifically for the Web create a positive user experience, which helps readability</li>
@@ -100,7 +100,7 @@ blockquote p {font-size:16px;}
 <h3 id="users">Who are your users?</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Define your users</li>
@@ -116,7 +116,7 @@ blockquote p {font-size:16px;}
 <h3 id="tasks">What are their tasks?</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Define the users' tasks</li>
@@ -132,7 +132,7 @@ blockquote p {font-size:16px;}
 <h3 id="need">What information do they need?</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Determine the content required to complete the tasks</li>
@@ -153,7 +153,7 @@ blockquote p {font-size:16px;}
 <h3 id="goals">What are your goals?</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Establish your goals for the content</li>
@@ -170,7 +170,7 @@ blockquote p {font-size:16px;}
 <h3 id="organize">Organize your content</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Categorize your content</li>
@@ -186,7 +186,7 @@ blockquote p {font-size:16px;}
 <h3 id="structure">Organize your page structure</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>First &ndash; conclusion, summary, or task</li>
@@ -202,7 +202,7 @@ blockquote p {font-size:16px;}
 <h3 id="alphabetization">Alphabetization</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li> Information is best organized by priority, importance, popularity, not alphabetical order</li>
@@ -229,7 +229,7 @@ blockquote p {font-size:16px;}
 <h3 id="write">Write in complete blocks</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Write each page as if it were the first page users will read</li>
@@ -252,7 +252,7 @@ blockquote p {font-size:16px;}
 <h3 id="length">Page length</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Users do scroll down the page</li>
@@ -285,7 +285,7 @@ blockquote p {font-size:16px;}
 <h3 id="plain">Use plain language</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Use common and familiar terms and phrases</li>
@@ -305,7 +305,7 @@ blockquote p {font-size:16px;}
 <h3 id="scan">Create scannable text</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Users scan text rather than read each word</li>
@@ -338,7 +338,7 @@ blockquote p {font-size:16px;}
 <h3 id="task">Focus on the task</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Help users find their task</li>
@@ -353,7 +353,7 @@ blockquote p {font-size:16px;}
 <h3 id="parallel">Use parallel structure</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Use the same verb tense</li>
@@ -409,7 +409,7 @@ blockquote p {font-size:16px;}
 <h3 id="scent">Create a scent of information</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Users are on a hunt for information</li>
@@ -432,7 +432,7 @@ blockquote p {font-size:16px;}
 <h3 id="professional">Be professional</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Focus on your audience</li>
@@ -448,7 +448,7 @@ blockquote p {font-size:16px;}
 <h3 id="search">Write to be found</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Determine users' common search terms and phrases</li>
@@ -489,7 +489,7 @@ blockquote p {font-size:16px;}
 <h3 id="aesthetics">Look good</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>The presentation must support the information</li>
@@ -530,7 +530,7 @@ blockquote p {font-size:16px;}
 <h3 id="heading">Headings</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Give each Web page a unique, descriptive title</li>
@@ -539,11 +539,17 @@ blockquote p {font-size:16px;}
         <li>Use sub-headings to break up long Web pages</li>
       </ul>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Related style guide resources</h2>
+        <h2 class="panel-title">Design guide</h2>
       </div>
-      <div class="list-group"><a href="../design/headings-en.html" class="list-group-item">Headings - Design guide</a><a href="../accessibility/headings-en.html" class="list-group-item">Headings  - Accessibility guide </a></div>
+      <div class="list-group"><a href="../design/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Design guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Accessibility guide</h2>
+      </div>
+      <div class="list-group"><a href="../accessibility/headings-en.html" class="list-group-item">Headings<span class="wb-inv"> - Accessibility guide</span> </a></div>
     </div>
   </div>
   <div class="mrgn-lft-md mrgn-rght-md">
@@ -583,7 +589,7 @@ blockquote p {font-size:16px;}
 <h3 id="lists">Lists</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Give the list a descriptive and unique title</li>
@@ -594,11 +600,17 @@ blockquote p {font-size:16px;}
         <li>List the items using a parallel structure</li>
       </ul>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Related style guide resources</h2>
+        <h2 class="panel-title">Writing guide</h2>
       </div>
-      <div class="list-group"><a href="../writing/formatting-en.html#lists" class="list-group-item">List formatting - Writing guide</a><a href="../design/lists-en.html" class="list-group-item">Lists - Design guide</a> <a href="../design/listgroup-en.html" class="list-group-item">List group - Design guide</a></div>
+      <div class="list-group"><a href="../writing/formatting-en.html#lists" class="list-group-item">List formatting<span class="wb-inv"> - Writing guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Design guide</h2>
+      </div>
+      <div class="list-group"><a href="../design/lists-en.html" class="list-group-item">Lists<span class="wb-inv"> - Design guide</span></a> <a href="../design/listgroup-en.html" class="list-group-item">List group<span class="wb-inv"> - Design guide</span></a> <a href="../design/pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
     </div>
   </div>
   <div class="mrgn-lft-md mrgn-rght-md">
@@ -610,7 +622,7 @@ blockquote p {font-size:16px;}
 <h3 id="links">Links</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Use the title of the target page as the title of the hyperlink, or as close as possible</li>
@@ -620,11 +632,23 @@ blockquote p {font-size:16px;}
         <li>Verify that the hyperlinks work</li>
       </ul>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Related style guide resources</h2>
+        <h2 class="panel-title">Writing guide</h2>
       </div>
-      <div class="list-group"><a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting - Writing guide</a> <a href="../design/links-en.html" class="list-group-item">Links - Design guide</a> <a href="../accessibility/links-en.html" class="list-group-item">Links - Accessibility guide</a></div>
+      <div class="list-group"><a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting<span class="wb-inv"> - Writing guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Design guide</h2>
+      </div>
+      <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Design guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Accessibility guide</h2>
+      </div>
+      <div class="list-group"><a href="../accessibility/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Accessibility guide</span></a></div>
     </div>
   </div>
   <div class="mrgn-lft-md mrgn-rght-md">
@@ -636,7 +660,7 @@ blockquote p {font-size:16px;}
 <h3 id="image">Images</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Images must support the information</li>
@@ -644,11 +668,17 @@ blockquote p {font-size:16px;}
         <li>Images can slow the search for information</li>
       </ul>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <h2 class="panel-title">Related style guide resources</h2>
+        <h2 class="panel-title">Design guide</h2>
       </div>
-      <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images - Design guide</a> <a href="../design/icons-en.html" class="list-group-item">Icons - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox - Design guide</a><a href="../accessibility/images-en.html" class="list-group-item">Images - Accessibility guide</a> </div>
+      <div class="list-group"><a href="../design/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Design guide</span></a> <a href="../design/icons-en.html" class="list-group-item">Icons<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html" class="list-group-item">Lightbox<span class="wb-inv"> - Design guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title">Accessibility guide</h2>
+      </div>
+      <div class="list-group"><a href="../accessibility/images-en.html" class="list-group-item">Images<span class="wb-inv"> - Accessibility guide</span></a> </div>
     </div>
   </div>
   <div class="mrgn-lft-md mrgn-rght-md">
@@ -671,7 +701,7 @@ blockquote p {font-size:16px;}
 <h3 id="tables">Tables</h3>
 <div class="row">
   <div class="pull-right col-md-4">
-    <div class="alert alert-info">
+    <div class="alert alert-success">
       <h3 class="mrgn-tp-0">Key points</h3>
       <ul>
         <li>Ensure that all columns and/or rows have a heading</li>
@@ -680,11 +710,17 @@ blockquote p {font-size:16px;}
         <li>Ensure that there is enough white space around each data element. </li>
       </ul>
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Related style guide resources </h3>
+        <h3 class="panel-title">Design guide</h3>
       </div>
-      <div class="list-group"><a href="../design/tables-en.html" class="list-group-item">Tables - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in - Design guide</a> <a href="../accessibility/tables-en.html" class="list-group-item">Tables - Accessibility guide</a></div>
+      <div class="list-group"><a href="../design/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/tables/tables-en.html" class="list-group-item">Tables plug-in<span class="wb-inv"> - Design guide</span></a></div>
+    </div>
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <h3 class="panel-title">Accessibility guide</h3>
+      </div>
+      <div class="list-group"><a href="../accessibility/tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Accessibility guide</span></a></div>
     </div>
   </div>
   <div class="mrgn-lft-md mrgn-rght-md">
