--- a/new/accessibility/links-en.html
+++ b/new/accessibility/links-en.html
@@ -18,7 +18,7 @@
 <p>The following summarizes selected techniques from the <a href="http://www.w3.org/TR/WCAG20/" rel="external">Web Content Accessibility Guidelines (WCAG) 2.0</a> for satisfying the most common applicable success criteria related to   this topic.  Additional WCAG 2.0 success criteria, techniques, and   failures not listed here may also be applicable depending on the   content.</p>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -38,23 +38,31 @@
         </ul>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links - Design guide</a> <a href="../design/alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="../design/buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="../design/listgroup-en.html" class="list-group-item">List groups  - Design guide</a> <a href="../design/pagination-en.html" class="list-group-item">Pagination - Design guide</a> <a href="../writing/principals-en.html#links" class="list-group-item">Link principals - Writing guide</a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting - Writing guide</a></div>
+        <div class="list-group"><a href="../design/links-en.html" class="list-group-item">Links<span class="wb-inv"> - Design guide</span></a> <a href="../design/alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="../design/buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="../design/listgroup-en.html" class="list-group-item">List groups<span class="wb-inv"> - Design guide</span></a> <a href="../design/pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide</h2>
+        </div>
+        <div class="list-group"><a href="../writing/principals-en.html#links" class="list-group-item">Link principals<span class="wb-inv"> - Writing guide</span></a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>A link is a type of <a href="keyboard-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
+      <ul>
+        <li>Takes the user to another web page; or </li>
+        <li>Jumps to another location within the same web page; or</li>
+        <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
+      </ul>
+      <h2 id="ds">Descriptive link text</h2>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>A link is a type of <a href="keyboard-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
-  <ul>
-    <li>Takes the user to another web page; or </li>
-    <li>Jumps to another location within the same web page; or</li>
-    <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
-  </ul>
-  <h2 id="ds">Descriptive link text</h2>
   <div class="row">
     <div class="pull-right col-md-4">
       <div class="panel panel-default">
