--- a/new/design/alerts-en.html
+++ b/new/design/alerts-en.html
@@ -17,7 +17,7 @@
 <h1>Alerts <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -31,30 +31,32 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="panels-en.html" class="list-group-item">Panels - Design guide</a> <a href="sizing-en.html" class="list-group-item">Sizing - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview - Design guide </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation - Design guide </a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay - Design guide </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout - Design guide </a></div>
+        <div class="list-group"><a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="sizing-en.html" class="list-group-item">Sizing<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span></a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
-  </div>
-  <h2 id="description">Description</h2>
-  <p>Provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
-  <h2 id="options">Alert options</h2>
-  <p>Wrap any text and an optional dismiss button in <code>.alert</code> and one of the four contextual classes (e.g., <code>.alert-success</code>) for basic alert messages.</p>
-  <p>Alerts don't have default classes, only base and modifier classes. A default gray alert doesn't make too much sense, so you're required to specify a type via contextual class. Choose from success, info, warning, or danger.</p>
-  <div class="alert alert-success"> <strong>Well done!</strong> You successfully read this important alert message. </div>
-  <div class="alert alert-info"> <strong>Heads up!</strong> This alert needs your attention, but it's not super important. </div>
-  <div class="alert alert-warning"> <strong>Warning!</strong> Best check yo self, you're not looking too good. </div>
-  <div class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
-  <div class="mrgn-tp-lg">
-    <pre><code>&lt;div class=&quot;alert alert-success&quot;&gt;...&lt;/div&gt;
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>Provide contextual feedback messages for typical user actions with the handful of available and flexible alert messages.</p>
+      <h2 id="options">Alert options</h2>
+      <p>Wrap any text and an optional dismiss button in <code>.alert</code> and one of the four contextual classes (e.g., <code>.alert-success</code>) for basic alert messages.</p>
+      <p>Alerts don't have default classes, only base and modifier classes. A default gray alert doesn't make too much sense, so you're required to specify a type via contextual class. Choose from success, info, warning, or danger.</p>
+      <div class="alert alert-success"> <strong>Well done!</strong> You successfully read this important alert message. </div>
+      <div class="alert alert-info"> <strong>Heads up!</strong> This alert needs your attention, but it's not super important. </div>
+      <div class="alert alert-warning"> <strong>Warning!</strong> Best check yo self, you're not looking too good. </div>
+      <div class="alert alert-danger"> <strong>Oh snap!</strong> Change a few things up and try submitting again. </div>
+      <div class="mrgn-tp-lg">
+        <pre><code>&lt;div class=&quot;alert alert-success&quot;&gt;...&lt;/div&gt;
 &lt;div class=&quot;alert alert-info&quot;&gt;...&lt;/div&gt;
 &lt;div class=&quot;alert alert-warning&quot;&gt;...&lt;/div&gt;
 &lt;div class=&quot;alert alert-danger&quot;&gt;...&lt;/div&gt;
 </code></pre>
+      </div>
+    </div>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
     <div class="col-md-6">
