--- a/new/design/alignment-en.html
+++ b/new/design/alignment-en.html
@@ -31,11 +31,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="floats-en.html" class="list-group-item">Floats - Design guide </a></div>
+        <div class="list-group"><a href="floats-en.html" class="list-group-item">Floats<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
