--- a/new/design/badges-en.html
+++ b/new/design/badges-en.html
@@ -33,11 +33,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="labels-en.html" class="list-group-item">Labels - Design guide </a> <a href="pills-en.html" class="list-group-item">Pills - Design guide </a></div>
+        <div class="list-group"><a href="labels-en.html" class="list-group-item">Labels<span class="wb-inv"> - Design guide</span></a> <a href="pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
