--- a/new/design/blockquotes-en.html
+++ b/new/design/blockquotes-en.html
@@ -17,7 +17,7 @@
 <h1>Blockquotes <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -30,79 +30,87 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Writing guide</h2>
         </div>
-        <div class="list-group"><a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes - Writing guide</a> <a href="../accessibility/quotations-en.html" class="list-group-item">Quotations and language - Accessibility guide</a></div>
+        <div class="list-group"><a href="../writing/formatting-en.html#blockquotes" class="list-group-item">Blockquotes<span class="wb-inv"> - Writing guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide</h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/quotations-en.html" class="list-group-item">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
-  </div>
-  <h2 id="description">Description</h2>
-  <p>For quoting blocks of content from another source within your document.</p>
-  <h2 id="options">Blockquote options</h2>
-  <p>Wrap <code>&lt;blockquote&gt;</code> around any <abbr title="HyperText Markup Language">HTML</abbr> as the quote. For straight quotes, we recommend a <code>&lt;p&gt;</code>.</p>
-  <blockquote>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-  </blockquote>
-  <div class="mrgn-tp-lg">
-    <pre><code>&lt;blockquote&gt;
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>For quoting blocks of content from another source within your document.</p>
+      <h2 id="options">Blockquote options</h2>
+      <p>Wrap <code>&lt;blockquote&gt;</code> around any <abbr title="HyperText Markup Language">HTML</abbr> as the quote. For straight quotes, we recommend a <code>&lt;p&gt;</code>.</p>
+      <blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+      </blockquote>
+      <div class="mrgn-tp-lg">
+        <pre><code>&lt;blockquote&gt;
   &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
 &lt;/blockquote&gt;
 </code></pre>
-  </div>
-  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-    <div class="col-md-6 brdr-lft">
-      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-  </div>
-  <h3>Naming a source</h3>
-  <p>Add <code>&lt;small&gt;</code> tag for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
-  <blockquote>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-    <small>Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-  <div class="mrgn-tp-lg">
-    <pre><code>&lt;blockquote&gt;
+      </div>
+      <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+      <h3>Naming a source</h3>
+      <p>Add <code>&lt;small&gt;</code> tag for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
+      <blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <small>Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
+      <div class="mrgn-tp-lg">
+        <pre><code>&lt;blockquote&gt;
   &lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
   &lt;small&gt;Someone famous in &lt;cite title=&quot;Source Title&quot;&gt;Source Title&lt;/cite&gt;&lt;/small&gt;
 &lt;/blockquote&gt;
 </code></pre>
-  </div>
-  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-    <div class="col-md-6 brdr-lft">
-      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
-  </div>
-  <h3>Alternate displays</h3>
-  <p>Use <code>.pull-right</code> for a floated, right-aligned blockquote.</p>
-  <blockquote class="pull-right">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-    <small>Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-  <div class="clearfix"></div>
-  <div class="mrgn-tp-lg">
-    <pre><code>&lt;blockquote class=&quot;pull-right&quot;&gt;
+      </div>
+      <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+      <h3>Alternate displays</h3>
+      <p>Use <code>.pull-right</code> for a floated, right-aligned blockquote.</p>
+      <blockquote class="pull-right">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+        <small>Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
+      <div class="clearfix"></div>
+      <div class="mrgn-tp-lg">
+        <pre><code>&lt;blockquote class=&quot;pull-right&quot;&gt;
   ...
 &lt;/blockquote&gt;
 </code></pre>
-    <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-      <div class="col-md-6">
-        <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-        <p>(Info goes here)</p>
-      </div>
-      <div class="col-md-6 brdr-lft">
-        <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-        <p>(Info goes here)</p>
+        <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+          <div class="col-md-6">
+            <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+            <p>(Info goes here)</p>
+          </div>
+          <div class="col-md-6 brdr-lft">
+            <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+            <p>(Info goes here)</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
