--- a/new/design/buttons-en.html
+++ b/new/design/buttons-en.html
@@ -39,11 +39,17 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="forms-en.html" class="list-group-item">Forms - Design guide</a><a href="../accessibility/forms-en.html" class="list-group-item">Forms - Accessibility guide</a></div>
+        <div class="list-group"><a href="forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide</h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/forms-en.html" class="list-group-item">Forms<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
   </div>
