--- a/new/design/colour-en.html
+++ b/new/design/colour-en.html
@@ -17,7 +17,7 @@
 <h1>Colour <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -33,59 +33,67 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="panels-en.html" class="list-group-item">Panels - Design guide</a> <a href="tables-en.html" class="list-group-item">Tables - Design guide</a> <a href="../accessibility/colour-en.html" class="list-group-item">Colour - Accessibility guide</a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts <span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a> <a href="tables-en.html" class="list-group-item">Tables<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide </h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
-  </div>
-  <h2 id="description">Description</h2>
-  <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
-  <h2 id="default">Default appearance</h2>
-  <p>(Info goes here) </p>
-  <h2 id="text">Coloured text</h2>
-  <p>Use font colours to highlight content and / or create information blocks that focus the user's attention.</p>
-  <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
-  <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-  <p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
-  <p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-  <p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
-  <p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
-  <div class="mrgn-tp-lg">
-    <pre><code>&lt;p class=&quot;text-muted&quot;&gt;...&lt;/p&gt;
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>Colour is a presentation element on a web page used either for decorative purposes or to convey information.</p>
+      <h2 id="default">Default appearance</h2>
+      <p>(Info goes here) </p>
+      <h2 id="text">Coloured text</h2>
+      <p>Use font colours to highlight content and / or create information blocks that focus the user's attention.</p>
+      <p class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</p>
+      <p class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+      <p class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
+      <p class="text-info">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+      <p class="text-warning">Etiam porta sem malesuada magna mollis euismod.</p>
+      <p class="text-danger">Donec ullamcorper nulla non metus auctor fringilla.</p>
+      <div class="mrgn-tp-lg">
+        <pre><code>&lt;p class=&quot;text-muted&quot;&gt;...&lt;/p&gt;
 &lt;p class=&quot;text-primary&quot;&gt;...&lt;/p&gt;
 &lt;p class=&quot;text-success&quot;&gt;...&lt;/p&gt;
 &lt;p class=&quot;text-info&quot;&gt;...&lt;/p&gt;
 &lt;p class=&quot;text-warning&quot;&gt;...&lt;/p&gt;
 &lt;p class=&quot;text-danger&quot;&gt;...&lt;/p&gt;
 </code></pre>
-  </div>
-  <div class="alert alert-info mrgn-tp-lg">
-    <h4>Dealing with specificity</h4>
-    <p>Sometimes emphasis classes cannot be applied due to the specificity of another selector. In most cases, a sufficient workaround is to wrap your text in a <code>&lt;span&gt;</code> with the class.</p>
-  </div>
-  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-    <div class="col-md-6">
-      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
+      </div>
+      <div class="alert alert-info mrgn-tp-lg">
+        <h4>Dealing with specificity</h4>
+        <p>Sometimes emphasis classes cannot be applied due to the specificity of another selector. In most cases, a sufficient workaround is to wrap your text in a <code>&lt;span&gt;</code> with the class.</p>
+      </div>
+      <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <div class="col-md-6">
+          <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+        <div class="col-md-6 brdr-lft">
+          <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+          <p>(Info goes here)</p>
+        </div>
+      </div>
+      <h2 id="message">Coloured message boxes</h2>
+      <p>For message colour options, refer to:</p>
+      <ul>
+        <li> <a href="panels-en.html#colour">Panels: Add colour</a></li>
+        <li> <a href="alerts-en.html#options">Alerts: Alert options</a></li>
+      </ul>
+      <h2 id="tables">Coloured tables</h2>
+      <p>For table colour options, refer to <a href="tables-en.html#tables-contextual-classes">Tables: Coloured cells</a></p>
+      <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
     </div>
-    <div class="col-md-6 brdr-lft">
-      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-      <p>(Info goes here)</p>
-    </div>
   </div>
-  <h2 id="message">Coloured message boxes</h2>
-  <p>For message colour options, refer to:</p>
-  <ul>
-    <li> <a href="panels-en.html#colour">Panels: Add colour</a></li>
-    <li> <a href="alerts-en.html#options">Alerts: Alert options</a></li>
-  </ul>
-  <h2 id="tables">Coloured tables</h2>
-  <p>For table colour options, refer to <a href="tables-en.html#tables-contextual-classes">Tables: Coloured cells</a></p>
-  <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
 </div>
 </body>
 </html>
