--- a/new/design/labels-en.html
+++ b/new/design/labels-en.html
@@ -17,7 +17,7 @@
 <h1>Labels <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -30,33 +30,41 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges - Design guide</a></div>
+        <div class="list-group"><a href="badges-en.html" class="list-group-item">Badges<span class="wb-inv"> - Design guide</span></a> <a href="colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide</h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/colour-en.html" class="list-group-item">Colour<span class="wb-inv"> - Accessibility guide</span></a></div>
       </div>
     </div>
-  </div>
-  <h2 id="description">Description</h2>
-  <p>(Info goes here)</p>
-  <h2 id="options">Label options</h2>
-  <p>Label options:</p>
-  <span class="label label-default">Default</span> <span class="label label-primary">Primary</span> <span class="label label-success">Success</span> <span class="label label-info">Info</span> <span class="label label-warning">Warning</span> <span class="label label-danger">Danger</span>
-  <pre class="mrgn-tp-md"><code class="html">&lt;span class= &quot;label label-default&quot;&gt;Default&lt;/span&gt;
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>(Info goes here)</p>
+      <h2 id="options">Label options</h2>
+      <p>Label options:</p>
+      <span class="label label-default">Default</span> <span class="label label-primary">Primary</span> <span class="label label-success">Success</span> <span class="label label-info">Info</span> <span class="label label-warning">Warning</span> <span class="label label-danger">Danger</span>
+      <pre class="mrgn-tp-md"><code class="html">&lt;span class= &quot;label label-default&quot;&gt;Default&lt;/span&gt;
 &lt;span class= &quot;label label-primary&quot;&gt;Primary&lt;/span&gt;
 &lt;span class= &quot;label label-success&quot;&gt;Success&lt;/span&gt;
 &lt;span class= &quot;label label-info&quot;&gt;Info&lt;/span&gt;
 &lt;span class= &quot;label label-warning&quot;&gt;Warning&lt;/span&gt;
 &lt;span class= &quot;label label-danger&quot;&gt;Danger&lt;/span&gt;
 </code></pre>
-  <h3 id="examples">Examples</h3>
-  <p>Some text here <span class="label label-default">New</span></p>
-  <p>Some text here <span class="label label-primary">Updated</span></p>
-  <pre><code>&lt;p&gt;Some text here &lt;span class=&quot;label label-default&quot;&gt;New&lt;/span&gt;&lt;/p&gt; 
+      <h3 id="examples">Examples</h3>
+      <p>Some text here <span class="label label-default">New</span></p>
+      <p>Some text here <span class="label label-primary">Updated</span></p>
+      <pre><code>&lt;p&gt;Some text here &lt;span class=&quot;label label-default&quot;&gt;New&lt;/span&gt;&lt;/p&gt; 
 &lt;p&gt;Some text here &lt;span class=&quot;label label-primary&quot;&gt;Updated&lt;/span&gt;&lt;/p&gt;</code></pre>
-<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    </div>
+  </div>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
     <div class="col-md-6">
       <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
       <p>(Info goes here)</p>
