--- a/new/design/links-en.html
+++ b/new/design/links-en.html
@@ -17,7 +17,7 @@
 <h1>Links <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -31,30 +31,44 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide</h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="listgroup-en.html" class="list-group-item">List groups  - Design guide</a> <a href="pagination-en.html" class="list-group-item">Pagination - Design guide</a> <a href="pills-en.html" class="list-group-item">Pills - Design guide</a> <a href="../accessibility/links-en.html" class="list-group-item">Links - Accessibility guide</a> <a href="../writing/principals-en.html#links" class="list-group-item">Link principals - Writing guide</a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting - Writing guide</a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="buttons-en.html" class="list-group-item">Buttons<span class="wb-inv"> - Design guide</span></a> <a href="listgroup-en.html" class="list-group-item">List groups<span class="wb-inv"> - Design guide</span></a> <a href="pagination-en.html" class="list-group-item">Pagination<span class="wb-inv"> - Design guide</span></a> <a href="pills-en.html" class="list-group-item">Pills<span class="wb-inv"> - Design guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Accessibility guide</h2>
+        </div>
+        <div class="list-group"><a href="../accessibility/links-en.html" class="list-group-item">Links <span class="wb-inv">- Accessibility guide</span></a></div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title">Writing guide</h2>
+        </div>
+        <div class="list-group"><a href="../writing/principals-en.html#links" class="list-group-item">Link principals<span class="wb-inv"> - Writing guide</span></a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting<span class="wb-inv"> - Writing guide</span></a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>A link is a type of <a href="http://wet-boew.github.io/wet-boew/demos/opt-cont/kb-cv-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
+      <ul>
+        <li>Takes the user to another web page; or </li>
+        <li>Jumps to another location within the same web page; or</li>
+        <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
+      </ul>
+      <h2 id="default">Default appearance</h2>
+      <p>The default appearance of a link is this: <a href="#" >Demo link</a></p>
+      <h2 id="options">Options</h2>
+      <p>To modify overrid the default appearance of a link, refer to:</p>
+      <ul>
+        <li> <a href="alerts-en.html#links">Alerts: Alert links</a></li>
+      </ul>
+      <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>A link is a type of <a href="http://wet-boew.github.io/wet-boew/demos/opt-cont/kb-cv-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
-  <ul>
-    <li>Takes the user to another web page; or </li>
-    <li>Jumps to another location within the same web page; or</li>
-    <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
-  </ul>
-  <h2 id="default">Default appearance</h2>
-  <p>The default appearance of a link is this: <a href="#" >Demo link</a></p>
-  <h2 id="options">Options</h2>
-  <p>To modify overrid the default appearance of a link, refer to:</p>
-  <ul>
-    <li> <a href="alerts-en.html#links">Alerts: Alert links</a></li>
-  </ul>
-  <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
 </div>
 </body>
 </html>
