--- a/new/design/panels-en.html
+++ b/new/design/panels-en.html
@@ -17,7 +17,7 @@
 <h1>Panels <small>Design guide</small></h1>
 <div class="wb-prettify all-pre">
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 mrgn-bttm-lg">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h2 class="panel-title">Table of contents</h2>
@@ -35,17 +35,19 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="panel panel-default">
+    <div class="col-md-4 pull-right mrgn-bttm-lg">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content - Design guide</a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview - Design guide </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation - Design guide </a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay - Design guide </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout - Design guide </a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/archived/archived-en.html" class="list-group-item">Archiving content<span class="wb-inv"> - Design guide</span></a> <a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html" class="list-group-item">Data Inview<span class="wb-inv"> - Design guide</span> </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/formvalid/formvalid-en.html" class="list-group-item">Form validation<span class="wb-inv"> - Design guide</span> </a><a href="http://wet-boew.github.io/v4.0-ci/demos/overlay/overlay-en.html" class="list-group-item">Overlay<span class="wb-inv"> - Design guide</span> </a> <a href="http://wet-boew.github.io/v4.0-ci/demos/session-timeout/session-timeout-en.html" class="list-group-item">Session timeout<span class="wb-inv"> - Design guide</span> </a></div>
       </div>
     </div>
+    <div class="mrgn-lft-md mrgn-rght-md">
+      <h2 id="description">Description</h2>
+      <p>(Info goes here)</p>
+    </div>
   </div>
-  <h2 id="description">Description</h2>
-  <p>(Info goes here)</p>
   <h2 id="basic">Basic panel</h2>
   <p>By default, all the <code>.panel</code> does is apply some basic border and padding to contain some content.</p>
   <div class="panel panel-default">
@@ -134,7 +136,7 @@
     </div>
   </div>
   <h2 id="colour">Add colour</h2>
-  <p>Like other components, easily make a panel more meaningful to a particular context by adding any of the contextual state classes.</p>
+  <p>Easily make a panel more meaningful to a particular context by adding any of the contextual state classes.</p>
   <div class="panel panel-primary">
     <div class="panel-heading">
       <h3 class="panel-title">Panel title</h3>
