--- a/new/design/wells-en.html
+++ b/new/design/wells-en.html
@@ -32,11 +32,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="panel panel-default">
+      <div class="panel panel-info">
         <div class="panel-heading">
-          <h2 class="panel-title">Related style guide resources</h2>
+          <h2 class="panel-title">Design guide </h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="panels-en.html" class="list-group-item">Panels - Design guide</a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts<span class="wb-inv"> - Design guide</span></a> <a href="panels-en.html" class="list-group-item">Panels<span class="wb-inv"> - Design guide</span></a></div>
       </div>
     </div>
   </div>
